Fix card title overflow, modified card src to accept base64 encode, and added image to knowledge cards

--- a/client/src/styles/custom.scss
+++ b/client/src/styles/custom.scss
@@ -13,6 +13,7 @@
 
 .search-row {
   display: flex;
+  flex-direction: column;
   border-bottom: 1px solid $border;
   background-color: $secondary-bar-bg;
 }
